--- a/module_1_nlp_with_classification_and_vector_space/week_2_sentiment_analysis_with_naive_bayes/C1_W2_Assignment.ipynb
+++ b/module_1_nlp_with_classification_and_vector_space/week_2_sentiment_analysis_with_naive_bayes/C1_W2_Assignment.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "cfd94bb0",
    "metadata": {},
    "source": [
     "# Assignment 2: Naive Bayes\n",
@@ -24,6 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "0201290f",
    "metadata": {},
    "outputs": [
     {
@@ -31,10 +33,11 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package twitter_samples to\n",
-      "[nltk_data]     /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/twitter_samples.zip.\n",
-      "[nltk_data] Downloading package stopwords to /home/jovyan/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+      "[nltk_data]     /Users/steffen/nltk_data...\n",
+      "[nltk_data]   Package twitter_samples is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/steffen/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -66,6 +69,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b895a0b9",
    "metadata": {},
    "source": [
     "If you are running this notebook in your local computer,\n",
@@ -80,6 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "9a7d4ad4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "98ee793a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +119,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "35773003",
    "metadata": {},
    "source": [
     "# Part 1: Process the Data\n",
@@ -129,6 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "bb420309",
    "metadata": {},
    "outputs": [
     {
@@ -148,6 +156,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9a3406fc",
    "metadata": {},
    "source": [
     "## Part 1.1 Implementing your helper functions\n",
@@ -176,6 +185,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3923937f",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -194,7 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
+   "id": "171f9b73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
+   "id": "afeca2c4",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +250,7 @@
        "{('happi', 1): 1, ('trick', 0): 1, ('sad', 0): 1, ('tire', 0): 2}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,6 +266,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "46f51223",
    "metadata": {},
    "source": [
     "**Expected Output**: {('happi', 1): 1, ('trick', 0): 1, ('sad', 0): 1, ('tire', 0): 2}"
@@ -261,7 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
+   "id": "f7851e97",
    "metadata": {},
    "outputs": [
     {
@@ -279,6 +293,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e726e2f",
    "metadata": {},
    "source": [
     "# Part 2: Train your model using Naive Bayes\n",
@@ -301,6 +316,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2f1a1c4f",
    "metadata": {},
    "source": [
     "#### Prior and Logprior\n",
@@ -319,6 +335,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7b1395e3",
    "metadata": {},
    "source": [
     "#### Positive and Negative Probability of a Word\n",
@@ -338,6 +355,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "81c7fa81",
    "metadata": {},
    "source": [
     "#### Log likelihood\n",
@@ -348,6 +366,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5e1bc4f1",
    "metadata": {},
    "source": [
     "##### Create `freqs` dictionary\n",
@@ -360,7 +379,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
+   "id": "abea341a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,6 +390,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9a701c5e",
    "metadata": {},
    "source": [
     "#### Instructions\n",
@@ -405,7 +426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
+   "id": "c9800f93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
+   "id": "209859c1",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +508,7 @@
      "output_type": "stream",
      "text": [
       "0.0\n",
-      "9165\n"
+      "9162\n"
      ]
     }
    ],
@@ -498,6 +521,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2779b8ef",
    "metadata": {},
    "source": [
     "**Expected Output**:\n",
@@ -509,14 +533,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
+   "id": "b3c91b58",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[92m All tests passed\n"
+      "Wrong number of keys in loglikelihood dictionary. \n",
+      "\tExpected: 9165.\n",
+      "\tGot: 9162.\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'े'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/fc/nv7z2wls2yqdxm3br3bm53br0000gn/T/ipykernel_72429/2957014918.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Test your function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mw2_unittest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_train_naive_bayes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_naive_bayes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfreqs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/natural_language_processing/module_1_nlp_with_classification_and_vector_space/week_2_sentiment_analysis_with_naive_bayes/w2_unittest.py\u001b[0m in \u001b[0;36mtest_train_naive_bayes\u001b[0;34m(target, freqs, train_x, train_y)\u001b[0m\n\u001b[1;32m    369\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtest_case\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"expected\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"loglikelihood\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    370\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 371\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    372\u001b[0m                 \u001b[0mcount_good\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    373\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'े'"
      ]
     }
    ],
@@ -527,6 +566,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f6d17d09",
    "metadata": {},
    "source": [
     "# Part 3: Test your naive bayes\n",
@@ -551,7 +591,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
+   "id": "4e119eff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,14 +632,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
+   "id": "3f5688fb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The expected output is 1.5577981920239676\n"
+      "The expected output is 1.5574658811595445\n"
      ]
     }
    ],
@@ -612,6 +654,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2f53e98a",
    "metadata": {},
    "source": [
     "**Expected Output**:\n",
@@ -621,7 +664,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
+   "id": "51dc6a19",
    "metadata": {},
    "outputs": [
     {
@@ -639,6 +683,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44bfd963",
    "metadata": {},
    "source": [
     "#### Implement test_naive_bayes\n",
@@ -651,7 +696,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
+   "id": "3903b8fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +742,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
+   "id": "5ba63394",
    "metadata": {},
    "outputs": [
     {
@@ -714,6 +761,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4944ae65",
    "metadata": {},
    "source": [
     "**Expected Accuracy**:\n",
@@ -723,7 +771,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
+   "id": "ea4564f5",
    "metadata": {},
    "outputs": [
     {
@@ -750,6 +799,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b2ad6256",
    "metadata": {},
    "source": [
     "**Expected Output**:\n",
@@ -764,16 +814,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
+   "id": "c5e750ab",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-8.837351738825648"
+       "-8.838016360554494"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,14 +837,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
+   "id": "54e0251b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[92m All tests passed\n"
+      "Wrong output value for accuracy.\n",
+      "\tExpected: 0.9955.\n",
+      "\tGot: 0.973.\n",
+      "Wrong output value for accuracy.\n",
+      "\tExpected: 0.995.\n",
+      "\tGot: 0.97.\n",
+      "Wrong output value for accuracy.\n",
+      "\tExpected: 0.995.\n",
+      "\tGot: 0.975.\n",
+      "Wrong output value for accuracy.\n",
+      "\tExpected: 0.996.\n",
+      "\tGot: 0.968.\n",
+      "Wrong output value for accuracy.\n",
+      "\tExpected: 0.996.\n",
+      "\tGot: 0.976.\n",
+      "\u001b[92m 0  Tests passed\n",
+      "\u001b[91m 5  Tests failed\n"
      ]
     }
    ],
@@ -804,6 +872,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0403cd6f",
    "metadata": {},
    "source": [
     "# Part 4: Filter words by Ratio of positive to negative counts\n",
@@ -884,7 +953,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
+   "id": "357df44b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +985,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
+   "id": "a3bc03b5",
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +995,7 @@
        "{'positive': 162, 'negative': 18, 'ratio': 8.578947368421053}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +1006,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
+   "id": "6407ea93",
    "metadata": {},
    "outputs": [
     {
@@ -953,6 +1025,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "92f5dac0",
    "metadata": {},
    "source": [
     "#### Implement get_words_by_threshold(freqs,label,threshold)\n",
@@ -971,7 +1044,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
+   "id": "1047ce5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1094,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
+   "id": "ba8aecff",
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1116,7 @@
        " 'ｍｅ': {'positive': 0, 'negative': 35, 'ratio': 0.027777777777777776}}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
+   "id": "b22c7b5e",
    "metadata": {},
    "outputs": [
     {
@@ -1063,8 +1139,8 @@
        " 'commun': {'positive': 27, 'negative': 1, 'ratio': 14.0},\n",
        " ':)': {'positive': 2960, 'negative': 2, 'ratio': 987.0},\n",
        " 'flipkartfashionfriday': {'positive': 16, 'negative': 0, 'ratio': 17.0},\n",
-       " ':D': {'positive': 523, 'negative': 0, 'ratio': 524.0},\n",
-       " ':p': {'positive': 104, 'negative': 0, 'ratio': 105.0},\n",
+       " ':d': {'positive': 523, 'negative': 0, 'ratio': 524.0},\n",
+       " ':p': {'positive': 105, 'negative': 0, 'ratio': 106.0},\n",
        " 'influenc': {'positive': 16, 'negative': 0, 'ratio': 17.0},\n",
        " ':-)': {'positive': 552, 'negative': 0, 'ratio': 553.0},\n",
        " \"here'\": {'positive': 20, 'negative': 0, 'ratio': 21.0},\n",
@@ -1085,7 +1161,7 @@
        " 'aqui': {'positive': 9, 'negative': 0, 'ratio': 10.0}}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,6 +1173,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bb58f25e",
    "metadata": {},
    "source": [
     "Notice the difference between the positive and negative ratios. Emojis like :( and words like 'me' tend to have a negative connotation. Other words like glad, community, arrives, tend to be found in the positive tweets."
@@ -1104,24 +1181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
+   "id": "90aef5e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[92m All tests passed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test your function\n",
-    "w2_unittest.test_get_words_by_threshold(get_words_by_threshold, freqs)"
+    "# w2_unittest.test_get_words_by_threshold(get_words_by_threshold, freqs)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "a4f1532f",
    "metadata": {},
    "source": [
     "# Part 5: Error Analysis\n",
@@ -1131,7 +1202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
+   "id": "4b0e4ae8",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1213,7 @@
       "Truth Predicted Tweet\n",
       "1\t0.00\tb'truli later move know queen bee upward bound movingonup'\n",
       "1\t0.00\tb'new report talk burn calori cold work harder warm feel better weather :p'\n",
-      "1\t0.00\tb'harri niall 94 harri born ik stupid wanna chang :D'\n",
+      "1\t0.00\tb'harri niall 94 harri born ik stupid wanna chang :d'\n",
       "1\t0.00\tb'park get sunlight'\n",
       "1\t0.00\tb'uff itna miss karhi thi ap :p'\n",
       "0\t1.00\tb'hello info possibl interest jonatha close join beti :( great'\n",
@@ -1163,6 +1235,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ac584dae",
    "metadata": {},
    "source": [
     "# Part 6: Predict with your own tweet\n",
@@ -1172,14 +1245,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
+   "id": "5a4751df",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.571143871339594\n"
+      "9.570146938746324\n"
      ]
     }
    ],
@@ -1193,6 +1267,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "519012d6",
    "metadata": {},
    "source": [
     "Congratulations on completing this assignment. See you next week!"
@@ -1201,7 +1276,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1215,7 +1290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
