--- a/module_1_nlp_with_classification_and_vector_space/week_4_machine_translation_and_document_search/C1_W4_Assignment.ipynb
+++ b/module_1_nlp_with_classification_and_vector_space/week_4_machine_translation_and_document_search/C1_W4_Assignment.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "991d5bf7",
    "metadata": {},
    "source": [
     "# Assignment 4 - Naive Machine Translation and LSH\n",
@@ -21,6 +22,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc2519b3",
    "metadata": {},
    "source": [
     "### This assignment covers the folowing topics:\n",
@@ -52,7 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "id": "033ce1f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +84,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "id": "658cde74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +96,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23a7ff8a",
    "metadata": {},
    "source": [
     "<a name=\"1\"></a>\n",
@@ -110,6 +115,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8feae797",
    "metadata": {},
    "source": [
     "#### The subset of data\n",
@@ -119,7 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "id": "4d2c319c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +136,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bcded172",
    "metadata": {},
    "source": [
     "#### Look at the data\n",
@@ -148,6 +156,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e4f04105",
    "metadata": {},
    "source": [
     "#### Load two dictionaries mapping the English to French words\n",
@@ -157,7 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "id": "65c25b33",
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +189,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9ff16fbd",
    "metadata": {},
    "source": [
     "#### Looking at the English French dictionary\n",
@@ -198,6 +209,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ce4d02d7",
    "metadata": {},
    "source": [
     "<a name=\"1-1\"></a>\n",
@@ -229,6 +241,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c3757190",
    "metadata": {},
    "source": [
     "**Instructions**: Complete the function `get_matrices()`:\n",
@@ -238,6 +251,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ca1dfcac",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -256,7 +270,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
+   "id": "84c89cdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,6 +333,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b6c057d1",
    "metadata": {},
    "source": [
     "Now we will use function `get_matrices()` to obtain sets `X_train` and `Y_train`\n",
@@ -326,7 +342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
+   "id": "25c5d353",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +357,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
+   "id": "0d1f6949",
    "metadata": {},
    "outputs": [
     {
@@ -358,6 +376,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a1b3b0b",
    "metadata": {},
    "source": [
     "<a name=\"2\"></a>\n",
@@ -379,6 +398,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "335d8b71",
    "metadata": {},
    "source": [
     "### Describing translation as the minimization problem\n",
@@ -396,6 +416,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c7f2f99",
    "metadata": {},
    "source": [
     "### Actual loss function\n",
@@ -418,6 +439,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "138325ab",
    "metadata": {},
    "source": [
     "##### [Optional] Detailed explanation why we use norm squared instead of the norm:\n",
@@ -441,6 +463,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "515d3ed7",
    "metadata": {},
    "source": [
     "<a name=\"ex-02\"></a>\n",
@@ -458,6 +481,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "63e128ae",
    "metadata": {},
    "source": [
     "#### Instructions: complete the `compute_loss()` function\n",
@@ -469,6 +493,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3601e890",
    "metadata": {},
    "source": [
     "<details>    \n",
@@ -492,7 +517,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "id": "6ab97488",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -529,7 +555,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
+   "id": "aa5a7535",
    "metadata": {},
    "outputs": [
     {
@@ -553,6 +580,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c70c3ea3",
    "metadata": {},
    "source": [
     "**Expected output:**\n",
@@ -563,7 +591,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
+   "id": "e26e334b",
    "metadata": {},
    "outputs": [
     {
@@ -581,6 +610,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "421c5189",
    "metadata": {},
    "source": [
     "<a name=\"ex-03\"></a>\n",
@@ -604,6 +634,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73e04e01",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -622,7 +653,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
+   "id": "9931fe94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +681,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
+   "id": "ae0db9f1",
    "metadata": {},
    "outputs": [
     {
@@ -674,6 +707,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e4119027",
    "metadata": {},
    "source": [
     "**Expected output:**\n",
@@ -684,7 +718,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
+   "id": "8398ac3e",
    "metadata": {},
    "outputs": [
     {
@@ -702,6 +737,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a89eaaaf",
    "metadata": {},
    "source": [
     "### Step 3: Finding the optimal R with gradient descent algorithm\n",
@@ -715,6 +751,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c3ee6a65",
    "metadata": {},
    "source": [
     "#### Training with a fixed number of iterations\n",
@@ -741,6 +778,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02c72475",
    "metadata": {},
    "source": [
     "Pseudocode:\n",
@@ -753,6 +791,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "579989d4",
    "metadata": {},
    "source": [
     "#### Learning rate\n",
@@ -766,6 +805,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e2204a63",
    "metadata": {},
    "source": [
     "<a name=\"ex-04\"></a>\n",
@@ -777,6 +817,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "06cd9b59",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -793,7 +834,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
+   "id": "95376f3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +873,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
+   "id": "aca0b213",
    "metadata": {},
    "outputs": [
     {
@@ -860,6 +903,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0887f018",
    "metadata": {},
    "source": [
     "**Expected Output:**\n",
@@ -873,7 +917,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
+   "id": "2f515a37",
    "metadata": {},
    "outputs": [
     {
@@ -891,6 +936,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cd7cf67e",
    "metadata": {},
    "source": [
     "## Calculate transformation matrix R\n",
@@ -902,7 +948,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
+   "id": "29692e0e",
    "metadata": {},
    "outputs": [
     {
@@ -936,6 +983,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5c297d3",
    "metadata": {},
    "source": [
     "##### Expected Output\n",
@@ -962,6 +1010,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a595534",
    "metadata": {},
    "source": [
     "<a name=\"2-2\"></a>\n",
@@ -981,6 +1030,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "757f48f8",
    "metadata": {},
    "source": [
     "### Cosine similarity\n",
@@ -996,6 +1046,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf8a896e",
    "metadata": {},
    "source": [
     "#### Note: Distance and similarity are pretty much opposite things.\n",
@@ -1007,6 +1058,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "09caccf4",
    "metadata": {},
    "source": [
     "<a name=\"ex-05\"></a>\n",
@@ -1025,6 +1077,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8695e93b",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -1042,7 +1095,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
+   "id": "79fced22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
+   "id": "c537c949",
    "metadata": {},
    "outputs": [
     {
@@ -1106,6 +1161,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a2fc2f3",
    "metadata": {},
    "source": [
     "**Expected Output**:\n",
@@ -1117,7 +1173,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
+   "id": "849e52a5",
    "metadata": {},
    "outputs": [
     {
@@ -1135,6 +1192,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a365818e",
    "metadata": {},
    "source": [
     "### Test your translation and compute its accuracy\n",
@@ -1157,7 +1215,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
+   "id": "874b2269",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1202,6 +1261,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7d746722",
    "metadata": {},
    "source": [
     "Let's see how is your translation mechanism working on the unseen data:"
@@ -1209,7 +1269,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
+   "id": "4a2fb2c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
+   "id": "73486f6f",
    "metadata": {},
    "outputs": [
     {
@@ -1239,6 +1301,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c12178da",
    "metadata": {},
    "source": [
     "**Expected Output**:\n",
@@ -1254,7 +1317,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
+   "id": "ffe9c453",
    "metadata": {},
    "outputs": [
     {
@@ -1272,6 +1336,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "79786ca5",
    "metadata": {},
    "source": [
     "<a name=\"3\"></a>\n",
@@ -1290,7 +1355,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
+   "id": "c1fe6e66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,6 +1368,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e50c116d",
    "metadata": {},
    "source": [
     "<a name=\"3-1\"></a>\n",
@@ -1325,6 +1392,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "04dfd8a1",
    "metadata": {},
    "source": [
     "<a name=\"ex-07\"></a>\n",
@@ -1339,6 +1407,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2d026be3",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -1357,7 +1426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
+   "id": "bb8c1ba5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1454,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
+   "id": "165d908b",
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1464,7 @@
        "array([-0.00268555, -0.15378189, -0.55761719, -0.07216644, -0.32263184])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1410,6 +1481,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b4e5f5f",
    "metadata": {},
    "source": [
     "**Expected output**:\n",
@@ -1421,7 +1493,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
+   "id": "929e4a70",
    "metadata": {},
    "outputs": [
     {
@@ -1439,6 +1512,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7645690",
    "metadata": {},
    "source": [
     "<a name=\"ex-08\"></a>\n",
@@ -1452,7 +1526,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
+   "id": "fa672256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1496,7 +1571,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
+   "id": "8d9209eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,7 +1581,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
+   "id": "0a4fd047",
    "metadata": {},
    "outputs": [
     {
@@ -1527,6 +1604,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "64241ac2",
    "metadata": {},
    "source": [
     "##### Expected Output\n",
@@ -1538,7 +1616,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
+   "id": "893cca64",
    "metadata": {},
    "outputs": [
     {
@@ -1556,6 +1635,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b13b6270",
    "metadata": {},
    "source": [
     "<a name=\"3-2\"></a>\n",
@@ -1570,7 +1650,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
+   "id": "00dfc742",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1581,7 +1662,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 36,
+   "id": "587b4ed9",
    "metadata": {},
    "outputs": [
     {
@@ -1604,6 +1686,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "86e98826",
    "metadata": {},
    "source": [
     "##### Expected Output\n",
@@ -1615,6 +1698,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dc617514",
    "metadata": {},
    "source": [
     "<a name=\"3-3\"></a>\n",
@@ -1637,7 +1721,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
+   "id": "815bb6e4",
    "metadata": {},
    "outputs": [
     {
@@ -1656,6 +1741,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7876a5c6",
    "metadata": {},
    "source": [
     "#### Choosing the number of planes\n",
@@ -1669,7 +1755,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
+   "id": "7e21dabb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1681,6 +1768,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "82e7b85e",
    "metadata": {},
    "source": [
     "<a name=\"3-4\"></a>\n",
@@ -1709,6 +1797,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ecbd278a",
    "metadata": {},
    "source": [
     "<a name=\"ex-09\"></a>\n",
@@ -1734,6 +1823,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc1c047d",
    "metadata": {},
    "source": [
     "#### Create the sets of planes\n",
@@ -1744,7 +1834,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
+   "id": "5fb406ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1755,6 +1846,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c70266f3",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -1770,7 +1862,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
+   "id": "68dc5196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1820,7 +1913,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
+   "id": "432ff5e2",
    "metadata": {},
    "outputs": [
     {
@@ -1846,6 +1940,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84133739",
    "metadata": {},
    "source": [
     "##### Expected Output\n",
@@ -1857,7 +1952,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
+   "id": "2f042fb5",
    "metadata": {},
    "outputs": [
     {
@@ -1875,6 +1971,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a4d8114",
    "metadata": {},
    "source": [
     "<a name=\"3-5\"></a>\n",
@@ -1894,6 +1991,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3bd4d314",
    "metadata": {},
    "source": [
     "<details>    \n",
@@ -1909,7 +2007,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 43,
+   "id": "c85e72ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1963,7 +2062,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 44,
+   "id": "a0da44d3",
    "metadata": {},
    "outputs": [
     {
@@ -1989,6 +2089,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "04cb495a",
    "metadata": {},
    "source": [
     "##### Expected output\n",
@@ -2001,7 +2102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
+   "id": "b3e33ab7",
    "metadata": {},
    "outputs": [
     {
@@ -2019,6 +2121,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fd5e92f8",
    "metadata": {},
    "source": [
     "<a name=\"3-6\"></a>\n",
@@ -2036,7 +2139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 46,
+   "id": "8d3ac499",
    "metadata": {},
    "outputs": [
     {
@@ -2090,6 +2194,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f546341",
    "metadata": {},
    "source": [
     "### Approximate K-NN\n",
@@ -2121,6 +2226,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e77e9cc6",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -2139,7 +2245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 47,
+   "id": "11cb8829",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2225,7 +2332,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 48,
+   "id": "60add79b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2237,7 +2345,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 49,
+   "id": "d522593e",
    "metadata": {},
    "outputs": [
     {
@@ -2264,7 +2373,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 50,
+   "id": "55f25dcd",
    "metadata": {},
    "outputs": [
     {
@@ -2295,7 +2405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 51,
+   "id": "93fe6a93",
    "metadata": {},
    "outputs": [
     {
@@ -2321,6 +2432,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cb158cde",
    "metadata": {},
    "source": [
     "# 4 Conclusion\n",
@@ -2331,6 +2443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b686f9b2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2338,7 +2451,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2352,7 +2465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
