--- a/module_2_nlp_with_probabilistic_models/week_4_word_embeddings_with_nn/C2_W4_lecture_nb_1_data_prep.ipynb
+++ b/module_2_nlp_with_probabilistic_models/week_4_word_embeddings_with_nn/C2_W4_lecture_nb_1_data_prep.ipynb
@@ -15,9 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/steffen/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "import nltk\n",
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corpus:  Who ❤️ \"word embeddings\" in 2020? I do!!!\n",
+      "After cleaning punctuation:  Who ❤️ \"word embeddings\" in 2020. I do.\n"
+     ]
+    }
+   ],
    "source": [
     "# Print original corpus\n",
     "print(f'Corpus:  {corpus}')\n",
@@ -101,9 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial string:  Who ❤️ \"word embeddings\" in 2020. I do.\n",
+      "After tokenization:  ['Who', '❤️', '``', 'word', 'embeddings', \"''\", 'in', '2020', '.', 'I', 'do', '.']\n"
+     ]
+    }
+   ],
    "source": [
     "# Print cleaned corpus\n",
     "print(f'Initial string:  {data}')\n",
@@ -124,9 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial list of tokens:  ['Who', '❤️', '``', 'word', 'embeddings', \"''\", 'in', '2020', '.', 'I', 'do', '.']\n",
+      "After cleaning:  ['who', '❤️', 'word', 'embeddings', 'in', '.', 'i', 'do', '.']\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the tokenized version of the corpus\n",
     "print(f'Initial list of tokens:  {data}')\n",
@@ -153,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,9 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corpus:  I am happy because I am learning\n",
+      "Words (tokens):  ['i', 'am', 'happy', 'because', 'i', 'am', 'learning']\n"
+     ]
+    }
+   ],
    "source": [
     "# Define new corpus\n",
     "corpus = 'I am happy because I am learning'\n",
@@ -204,9 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['now', 'it', 'your', 'turn', 'try', 'with', 'your', 'own', 'sentence', '.']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this with any sentence\n",
     "tokenize(\"Now it's your turn: try with your own sentence!\")"
@@ -230,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,9 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'am', 'because', 'i']\thappy\n",
+      "['am', 'happy', 'i', 'am']\tbecause\n",
+      "['happy', 'because', 'am', 'learning']\ti\n"
+     ]
+    }
+   ],
    "source": [
     "# Print 'context_words' and 'center_word' for the new corpus with a 'context half-size' of 2\n",
     "for x, y in get_windows(['i', 'am', 'happy', 'because', 'i', 'am', 'learning'], 2):\n",
@@ -279,9 +345,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['now', 'your']\tit\n",
+      "['it', 'turn']\tyour\n",
+      "['your', 'try']\tturn\n",
+      "['turn', 'with']\ttry\n",
+      "['try', 'your']\twith\n",
+      "['with', 'own']\tyour\n",
+      "['your', 'sentence']\town\n",
+      "['own', '.']\tsentence\n"
+     ]
+    }
+   ],
    "source": [
     "# Print 'context_words' and 'center_word' for any sentence with a 'context half-size' of 1\n",
     "for x, y in get_windows(tokenize(\"Now it's your turn: try with your own sentence!\"), 1):\n",
@@ -310,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,11 +408,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'am': 0, 'because': 1, 'happy': 2, 'i': 3, 'learning': 4}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print 'word2Ind' dictionary\n",
     "word2Ind"
@@ -346,9 +438,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index of the word 'i':   3\n"
+     ]
+    }
+   ],
    "source": [
     "# Print value for the key 'i' within word2Ind dictionary\n",
     "print(\"Index of the word 'i':  \",word2Ind['i'])"
@@ -363,9 +463,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'am', 1: 'because', 2: 'happy', 3: 'i', 4: 'learning'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print 'Ind2word' dictionary\n",
     "Ind2word"
@@ -373,11 +484,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word which has index 2:   happy\n"
+     ]
+    }
+   ],
    "source": [
     "# Print value for the key '2' within Ind2word dictionary\n",
     "print(\"Word which has index 2:  \",Ind2word[2] )"
@@ -392,9 +511,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of vocabulary:  5\n"
+     ]
+    }
+   ],
    "source": [
     "# Save length of word2Ind dictionary into the 'V' variable\n",
     "V = len(word2Ind)\n",
@@ -416,9 +543,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Save index of word 'happy' into the 'n' variable\n",
     "n = word2Ind['happy']\n",
@@ -436,9 +574,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create vector with the same length as the vocabulary, filled with zeros\n",
     "center_word_vector = np.zeros(V)\n",
@@ -456,9 +605,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Assert that the length of the vector is the same as the size of the vocabulary\n",
     "len(center_word_vector) == V"
@@ -473,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,9 +650,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 1., 0., 0.])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print vector\n",
     "center_word_vector"
@@ -507,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,9 +698,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 1., 0., 0.])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print output of 'word_to_one_hot_vector' function for word 'happy'\n",
     "word_to_one_hot_vector('happy', word2Ind, V)"
@@ -544,9 +726,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 1.])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print output of 'word_to_one_hot_vector' function for word 'learning'\n",
     "word_to_one_hot_vector('learning', word2Ind, V)"
@@ -579,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,9 +789,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0., 0., 0., 1., 0.]),\n",
+       " array([1., 0., 0., 0., 0.]),\n",
+       " array([0., 1., 0., 0., 0.]),\n",
+       " array([0., 0., 0., 1., 0.])]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create one-hot vectors for each context word using list comprehension\n",
     "context_words_vectors = [word_to_one_hot_vector(w, word2Ind, V) for w in context_words]\n",
@@ -616,9 +823,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.25, 0.25, 0.  , 0.5 , 0.  ])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Compute mean of the vectors using numpy\n",
     "np.mean(context_words_vectors, axis=0)"
@@ -635,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,9 +873,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.25, 0.25, 0.  , 0.5 , 0.  ])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print output of 'context_words_to_vector' function for context words: 'i', 'am', 'because', 'i'\n",
     "context_words_to_vector(['i', 'am', 'because', 'i'], word2Ind, V)"
@@ -672,9 +901,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.5 , 0.  , 0.25, 0.25, 0.  ])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print output of 'context_words_to_vector' function for context words: 'am', 'happy', 'i', 'am'\n",
     "context_words_to_vector(['am', 'happy', 'i', 'am'], word2Ind, V)"
@@ -706,9 +946,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i', 'am', 'happy', 'because', 'i', 'am', 'learning']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print corpus\n",
     "words"
@@ -723,9 +974,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Context words:  ['i', 'am', 'because', 'i'] -> [0.25 0.25 0.   0.5  0.  ]\n",
+      "Center word:  happy -> [0. 0. 1. 0. 0.]\n",
+      "\n",
+      "Context words:  ['am', 'happy', 'i', 'am'] -> [0.5  0.   0.25 0.25 0.  ]\n",
+      "Center word:  because -> [0. 1. 0. 0. 0.]\n",
+      "\n",
+      "Context words:  ['happy', 'because', 'am', 'learning'] -> [0.25 0.25 0.25 0.   0.25]\n",
+      "Center word:  i -> [0. 0. 0. 1. 0.]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print vectors associated to center and context words for corpus\n",
     "for context_words, center_word in get_windows(words, 2):  # reminder: 2 is the context half-size\n",
@@ -744,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,9 +1030,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Context words vector:  [0.25 0.25 0.   0.5  0.  ]\n",
+      "Center word vector:  [0. 0. 1. 0. 0.]\n",
+      "\n",
+      "Context words vector:  [0.5  0.   0.25 0.25 0.  ]\n",
+      "Center word vector:  [0. 1. 0. 0. 0.]\n",
+      "\n",
+      "Context words vector:  [0.25 0.25 0.25 0.   0.25]\n",
+      "Center word vector:  [0. 0. 0. 1. 0.]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print vectors associated to center and context words for corpus using the generator function\n",
     "for context_words_vector, center_word_vector in get_training_example(words, 2, word2Ind, V):\n",
@@ -788,7 +1071,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -802,7 +1085,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
